kube-petclinic.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: spring-petclinic
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: spring-petclinic
  name: spring-petclinic-deployment
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: petclinic-ui
  replicas: 5
  template:
    metadata:
      labels:
        app.kubernetes.io/name: petclinic-ui
    spec:
      containers:
      - image: 514712703977.dkr.ecr.us-west-2.amazonaws.com/java-petclinic:latest
        imagePullPolicy: Always
        name: petclinic-ui
        ports:
        - containerPort: 8081
      
---
apiVersion: v1
kind: Service
metadata:
  namespace: spring-petclinic
  name: spring-petclinic-service
spec:
  ports:
    - port: 80
      targetPort: 8081
      protocol: TCP
  type: NodePort
  selector:
    app.kubernetes.io/name: petclinic-ui
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: spring-petclinic
  name: spring-petclinic-ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internal
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}]'
    alb.ingress.kubernetes.io/inbound-cidrs: 192.168.0.0/16, 172.16.0.0/12, 10.0.0.0/8
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-west-2:514712703977:certificate/7027ee5d-9569-4fd1-8691-b7d97bc1a4bc
    external-dns.alpha.kubernetes.io/hostname: shoban.eksdemo.nonprod.pge.com
    
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: spring-petclinic-service
              port:
                number: 80
